@@ -9,7 +9,9 @@ class MPTT(ModelSQL, ModelView):
     _name = 'test.mptt'
     _description = __doc__
     name = fields.Char('Name', required=True)
-    sequence = fields.Integer('Sequence', required=True)
+    sequence = fields.Integer('Sequence',
+        order_field='(%(table)s.sequence IS NULL) %(order)s, '
+        '%(table)s.sequence %(order)s')
     parent = fields.Many2One('test.mptt', "Parent", select=True,
             left="left", right="right")
     left = fields.Integer('Left', required=True, select=True)
